# SentimentAnalysis

./: .gitignore  BiLSTM.py  DataSetup.py  DataVisualization.py  Dockerfile  Metrics.py  README.md  Train.py  TuneModel.py  deploy_sagemaker.py  inference.py  label_encoder.pickle  monitor_model.py  pyproject.toml  sagemaker_proxy.py  tokenizer.pickle
.github/workflows/: deploy.yaml
ChromeExtension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
Dataset/: .gitignore  master_dataset.csv.dvc
model/: MLmodel  conda.yaml  python_env.yaml
